[package]
name    = "webos"
version = "0.0.1"
edition = "2021"

description =   "WebOS/WASM core"
authors     = [
                "SurenAt93",
                "Dmitry Ponyatov <dponyatov@gmail.com>"
            ]

[dependencies]

[target.'cfg(unix)'.dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]

[target.'cfg(windows)'.dependencies]
